--- a/Shane.Church.Web.v2012/Views/Software/WindowsPhone.cshtml
+++ b/Shane.Church.Web.v2012/Views/Software/WindowsPhone.cshtml
@@ -7,8 +7,11 @@
 
 <div class="software-nav">
 	<ul class="tabs">
-		<li class="first last">
+		<li class="first">
 			<a id="post-tab-1" href="#tab-1" >Stirling Money</a>
+		</li>
+		<li class="last">
+			<a id="post-tab-2" href="#tab-2" >What I Eat</a>
 		</li>
 	</ul>
 </div>
@@ -75,6 +78,21 @@
 		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/stirlingmoney/06.png")" alt="Stirling Money Screenshot" style="max-height:400px"/>
 		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/stirlingmoney/07.png")" alt="Stirling Money Screenshot" style="max-height:400px"/>
 		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/stirlingmoney/08.png")" alt="Stirling Money Screenshot" style="max-height:400px"/>
+		<div class="clear">&nbsp;</div>
+	</div>
+	<div class="pane tab-2" id="tab-2">
+		<h2><a href="@Url.Action("WindowsPhone", "Software", new { id = 2 })">What I Eat</a></h2>
+		<div><a href="http://www.windowsphone.com/s?appid=225b965d-d41f-440b-9e56-f03a550052e8" class="blank"><img src="@Url.Content("~/Content/Images/WindowsPhone_208x67_blu.png")" alt="Windows Phone Marketplace" class="noborder" /></a></div>
+		<img class="imagefloat" src="@Url.Content("~/software/windowsphone/whatieat/1.png")" alt="Stirling Money Screenshot - Accounts Screen" style="max-height:400px"/>
+		<p>A simple food journal for Windows Phone</p>
+		<p>Want to keep track of what you eat but don't want all of the calorie databases and granular measurements? What I Eat is the app for you! You control the granularity and timing of the entries, and you control what you see.</p>
+		<p>Machine translated for broad localization!</p>
+		<p>What I Eat is available in the <a href="http://www.windowsphone.com/s?appid=225b965d-d41f-440b-9e56-f03a550052e8">Windows Phone Marketplace</a> as a free download.</p>
+		<div class="clear">&nbsp;</div>
+		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/whatieat/0.png")" alt="What I Eat Screenshot - Splash Screen" style="max-height:400px"/>
+		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/whatieat/2.png")" alt="What I Eat Screenshot" style="max-height:400px"/>
+		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/whatieat/3.png")" alt="What I Eat Screenshot" style="max-height:400px"/>
+		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/whatieat/4.png")" alt="What I Eat Screenshot" style="max-height:400px"/>
 		<div class="clear">&nbsp;</div>
 	</div>
 </div>
