--- a/Shane.Church.Web.v2012/Content/Site.css
+++ b/Shane.Church.Web.v2012/Content/Site.css
@@ -34,7 +34,7 @@ input[type="submit"] {
 	margin-top: 5px;	
 }
 
-input[type="submit"], 
+input[type="submit"],
 a.button {
 	display: table-cell;
 	background: #999999; /* Old browsers */
@@ -45,17 +45,19 @@ a.button {
 	background: -ms-linear-gradient(top, #999999 0%,#5B5B5B 100%); /* IE10+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#999999', endColorstr='#5B5B5B',GradientType=0 ); /* IE6-9 */
 	background: linear-gradient(top, #999999 0%,#5B5B5B 100%); /* W3C */
+	-moz-background-clip: border-box;
+	-webkit-background-clip: border-box;
 	background-clip: border-box;
-	width:81px;
+	width: 81px;
 	height: 25px;
 	line-height: 25px;
-	vertical-align:middle;
-	text-align:center;
-	border:none;
-	font-size:12px;
-	font-weight:bold;
-	color:#FFF;
-	cursor:pointer;
+	vertical-align: middle;
+	text-align: center;
+	border: none;
+	font-size: 12px;
+	font-weight: bold;
+	color: #FFF;
+	cursor: pointer;
 	text-decoration: none;
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
@@ -106,16 +108,18 @@ h1 {
 	font-style: italic;
 	font-family: Arial Black, Arial, Tahoma, sans-serif;
 	text-align: center;
+	-webkit-text-shadow: 1px 1px 3px #800080;
 	text-shadow: 1px 1px 3px #800080;
 }
 
 h2 {
-	color:#000000;
+	color: #000000;
 	font: 130% tahoma, arial, sans-serif;
 	font-weight: bold;
 	padding-bottom: 2px;
 	margin: 0 0 2px 0;
 	border-bottom: 1px solid #808080;
+	-webkit-text-shadow: 1px 1px 2px #c0c0c0;
 	text-shadow: 1px 1px 2px #c0c0c0;
 }
 
@@ -295,6 +299,7 @@ ul.ssc_nav li {
 	color: #fff;
 	border-right: 1px solid #5B5B5B;
 	border-left: 1px solid #999999;
+	-webkit-text-shadow: 1px 1px 1px #111;
 	text-shadow: 1px 1px 1px #111;
 	font-size: 14px;
 	position: relative;
@@ -663,8 +668,10 @@ img.blog_image {
 	background-image: -ms-linear-gradient(bottom, #fff 0%, #5B5B5B 100%); /* IE10+ */
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#5B5B5B', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
 	background-image: linear-gradient(bottom, #fff 0%, #5B5B5B 100%); /* W3C */
+	-moz-background-clip: border-box;
+	-webkit-background-clip: border-box;
 	background-clip: border-box;
-	padding:3px;
+	padding: 3px;
 	margin-bottom: 5px;
 }
 
@@ -795,8 +802,9 @@ img.blog_image {
 	color: #FFFFFF;
 	opacity: 0.8;
 	z-index: 2;
+	-webkit-text-shadow: 1px 1px 1px #000;
 	text-shadow: 1px 1px 1px #000;
- }
+}
 
 .photos_container .tile h4 {
 	font-size: 12px;
@@ -811,6 +819,7 @@ img.blog_image {
 	color: #FFFFFF;
 	opacity: 0.7;
 	z-index: 2;
+	-webkit-text-shadow: 1px 1px 1px #000;
 	text-shadow: 1px 1px 1px #000;
 }
 
@@ -841,15 +850,17 @@ img.blog_image {
 .view_photo_item .photo_image {
 }
 
-.view_photo_item .photo_image img {
-	-moz-border-radius: 10px;
-	-webkit-border-radius: 10px;
-	border-radius: 10px;
-	border: 1px solid #008000;
-	padding: 5px;
-	background-clip: border-box;
-	max-width: 100%;
-}
+	.view_photo_item .photo_image img {
+		-moz-border-radius: 10px;
+		-webkit-border-radius: 10px;
+		border-radius: 10px;
+		border: 1px solid #008000;
+		padding: 5px;
+		-moz-background-clip: border-box;
+		-webkit-background-clip: border-box;
+		background-clip: border-box;
+		max-width: 100%;
+	}
 
 /* Software Pages */
 ul.tabs {
@@ -953,20 +964,20 @@ div.panes img.imagefloatleft {
 	margin-left: 0px;
 }
 
-div.panes h2 a, 
+div.panes h2 a,
 div.panes h2 a:visited,
 div.panes h2 a:hover,
-div.panes h2 a:active
-{
-	color:#000000;
+div.panes h2 a:active {
+	color: #000000;
 	font: 130% tahoma, arial, sans-serif;
 	font-weight: bold;
 	padding-bottom: 2px;
 	margin: 0 0 2px 0;
 	border-bottom: 1px solid #808080;
+	-webkit-text-shadow: 1px 1px 2px #c0c0c0;
 	text-shadow: 1px 1px 2px #c0c0c0;
 	text-decoration: none;
-	background-color: transparent;	
+	background-color: transparent;
 }
 
 /* Reading List */
@@ -1018,33 +1029,35 @@ div.container-modal {
 	background-color:transparent;
 	display: none;
 }
-div.container-modal div.top {
-	position: relative;
-	height: 28px;
-	overflow: hidden;
-	width: 536px;
-	-moz-border-radius-topleft: 5px;
-	-moz-border-radius-topright:5px;
-	-moz-border-radius-bottomleft:0px;
-	-moz-border-radius-bottomright:0px;
-	-webkit-border-top-left-radius:5px;
-	-webkit-border-top-right-radius:5px;
-	-webkit-border-bottom-left-radius:0px;
-	-webkit-border-bottom-right-radius:0px;
-	border-top-left-radius:5px;
-	border-top-right-radius:5px;
-	border-bottom-left-radius:0px;
-	border-bottom-right-radius:0px;
-	background: #999999; /* Old browsers */
-	background: -moz-linear-gradient(top, #999999 0%, #5B5B5B 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#999999), color-stop(100%,#5B5B5B)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #999999 0%,#5B5B5B 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #999999 0%,#5B5B5B 100%); /* Opera11.10+ */
-	background: -ms-linear-gradient(top, #999999 0%,#5B5B5B 100%); /* IE10+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#999999', endColorstr='#5B5B5B',GradientType=0 ); /* IE6-9 */
-	background: linear-gradient(top, #999999 0%,#5B5B5B 100%); /* W3C */
-	background-clip: border-box;
-}
+	div.container-modal div.top {
+		position: relative;
+		height: 28px;
+		overflow: hidden;
+		width: 536px;
+		-moz-border-radius-topleft: 5px;
+		-moz-border-radius-topright: 5px;
+		-moz-border-radius-bottomleft: 0px;
+		-moz-border-radius-bottomright: 0px;
+		-webkit-border-top-left-radius: 5px;
+		-webkit-border-top-right-radius: 5px;
+		-webkit-border-bottom-left-radius: 0px;
+		-webkit-border-bottom-right-radius: 0px;
+		border-top-left-radius: 5px;
+		border-top-right-radius: 5px;
+		border-bottom-left-radius: 0px;
+		border-bottom-right-radius: 0px;
+		background: #999999; /* Old browsers */
+		background: -moz-linear-gradient(top, #999999 0%, #5B5B5B 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#999999), color-stop(100%,#5B5B5B)); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top, #999999 0%,#5B5B5B 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top, #999999 0%,#5B5B5B 100%); /* Opera11.10+ */
+		background: -ms-linear-gradient(top, #999999 0%,#5B5B5B 100%); /* IE10+ */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#999999', endColorstr='#5B5B5B',GradientType=0 ); /* IE6-9 */
+		background: linear-gradient(top, #999999 0%,#5B5B5B 100%); /* W3C */
+		-moz-background-clip: border-box;
+		-webkit-background-clip: border-box;
+		background-clip: border-box;
+	}
 div.container-modal div.top div.button-close {
 	width: 21px;
 	height: 20px;
@@ -1055,8 +1068,6 @@ div.container-modal div.top div.button-close {
 }
 div.container-modal div.top div.button-close a {
 	display: block;
-	width: 100%;
-	height: 100%;
 	text-indent: 9999px;
 	overflow: hidden;
 	text-decoration: none;
@@ -1179,16 +1190,18 @@ div.modal-content a.button {
 	background-position: 0px -20px;	
 }
 
-#modal-view-photo .caption {
-	margin-top: 10px;
-	background-color: #FFF;
-	background-clip: border-box;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	border-radius: 5px;	
-	text-align: center;
-	padding: 5px;
-}
+	#modal-view-photo .caption {
+		margin-top: 10px;
+		background-color: #FFF;
+		-moz-background-clip: border-box;
+		-webkit-background-clip: border-box;
+		background-clip: border-box;
+		-moz-border-radius: 5px;
+		-webkit-border-radius: 5px;
+		border-radius: 5px;
+		text-align: center;
+		padding: 5px;
+	}
 
 #modal-view-photo h4 {
 	color: #800080;	
@@ -1259,17 +1272,18 @@ li.tagCloud-tag a { text-decoration: none; }
 
 /* NuGet Badge */
 .nuget-badge code {
-    background-color: #202020;
-    border: 4px solid #c0c0c0;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    box-shadow: 2px 2px 3px #6e6e6e;
-    color: #e2e2e2;
-    display:block;
-    font: 1.5em 'andale mono', 'lucida console', monospace; 
-    line-height: 1.5em;
-    overflow: auto;
-    padding: 15px;
+	background-color: #202020;
+	border: 4px solid #c0c0c0;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	-webkit-box-shadow: 2px 2px 3px #6e6e6e;
+	box-shadow: 2px 2px 3px #6e6e6e;
+	color: #e2e2e2;
+	display: block;
+	font: 1.5em 'andale mono', 'lucida console', monospace;
+	line-height: 1.5em;
+	overflow: auto;
+	padding: 15px;
 }
 /* End NuGet Badge */
