What I Eat - 1.1.1 Update

--- a/Shane.Church.Web.v2012/Views/Software/WindowsPhone.cshtml
+++ b/Shane.Church.Web.v2012/Views/Software/WindowsPhone.cshtml
@@ -86,6 +86,18 @@
 		<img class="imagefloat" src="@Url.Content("~/software/windowsphone/whatieat/1.png")" alt="Stirling Money Screenshot - Accounts Screen" style="max-height:400px"/>
 		<p>A simple food journal for Windows Phone</p>
 		<p>Want to keep track of what you eat but don't want all of the calorie databases and granular measurements? What I Eat is the app for you! You control the granularity and timing of the entries, and you control what you see.</p>
+		<p>Version 1.1 - May 18, 2013</p>
+		<ul>
+			<li>Fixed bug where items would save on previous day in some time zones.</li>
+			<li>Added summary view</li>
+			<li>Added optional synchronization with Windows Azure Mobile Services in preparation for a Windows 8/RT companion</li>
+		</ul>
+		<p>
+			1.1.1 Update - June 2, 2013
+		</p>
+		<ul>
+			<li>Minor bug fixes</li>
+		</ul>
 		<p>Machine translated for broad localization!</p>
 		<p>What I Eat is available in the <a href="http://www.windowsphone.com/s?appid=225b965d-d41f-440b-9e56-f03a550052e8">Windows Phone Marketplace</a> as a free download.</p>
 		<div class="clear">&nbsp;</div>
@@ -93,6 +105,9 @@
 		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/whatieat/2.png")" alt="What I Eat Screenshot" style="max-height:400px"/>
 		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/whatieat/3.png")" alt="What I Eat Screenshot" style="max-height:400px"/>
 		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/whatieat/4.png")" alt="What I Eat Screenshot" style="max-height:400px"/>
+		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/whatieat/5.png")" alt="What I Eat Screenshot" style="max-height:400px"/>
+		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/whatieat/6.png")" alt="What I Eat Screenshot" style="max-height:400px"/>
+		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/whatieat/7.png")" alt="What I Eat Screenshot" style="max-height:400px"/>
 		<div class="clear">&nbsp;</div>
 	</div>
 </div>
