--- a/Shane.Church.Web.v2012/Views/Shared/_Layout.cshtml
+++ b/Shane.Church.Web.v2012/Views/Shared/_Layout.cshtml
@@ -79,6 +79,18 @@
 				</div>
 				@RenderSection("SideNavPostContainer", false)
 				<div class="clear">&nbsp;</div>
+                <div id="carbonads-container">
+                    <div class="carbonad">
+                        <div id="azcarbon"></div>
+                        <script type="text/javascript">
+                            var z = document.createElement("script");
+                            z.type = "text/javascript";
+                            z.async = true;
+                            z.src = "http://engine.carbonads.com/z/50375/azcarbon_2_1_0_VERTDARK";
+                            var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(z, s);
+                        </script>
+                    </div>
+                </div>
 			</aside>
 		</section>
 		<footer>
