Added Stirling Birthday to Windows Phone page

--- a/Shane.Church.Web.v2012/Views/Software/WindowsPhone.cshtml
+++ b/Shane.Church.Web.v2012/Views/Software/WindowsPhone.cshtml
@@ -10,9 +10,12 @@
 		<li class="first">
 			<a id="post-tab-1" href="#tab-1" >Stirling Money</a>
 		</li>
-		<li class="last">
+		<li>
 			<a id="post-tab-2" href="#tab-2" >What I Eat</a>
 		</li>
+        <li class="last">
+            <a id="post-tab-3" href="#tab-3">Stirling Birthday</a>
+        </li>
 	</ul>
 </div>
 <div class="panes">
@@ -83,7 +86,7 @@
 	<div class="pane tab-2" id="tab-2">
 		<h2><a href="@Url.Action("WindowsPhone", "Software", new { id = 2 })">What I Eat</a></h2>
 		<div><a href="http://www.windowsphone.com/s?appid=225b965d-d41f-440b-9e56-f03a550052e8" class="blank"><img src="@Url.Content("~/Content/Images/WindowsPhone_208x67_blu.png")" alt="Windows Phone Marketplace" class="noborder" /></a></div>
-		<img class="imagefloat" src="@Url.Content("~/software/windowsphone/whatieat/1.png")" alt="Stirling Money Screenshot - Accounts Screen" style="max-height:400px"/>
+		<img class="imagefloat" src="@Url.Content("~/software/windowsphone/whatieat/1.png")" alt="What I Eat Screenshot - Main Screen" style="max-height:400px"/>
 		<p>A simple food journal for Windows Phone</p>
 		<p>Want to keep track of what you eat but don't want all of the calorie databases and granular measurements? What I Eat is the app for you! You control the granularity and timing of the entries, and you control what you see.</p>
 		<p>Version 1.1 - May 18, 2013</p>
@@ -108,6 +111,30 @@
 		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/whatieat/5.png")" alt="What I Eat Screenshot" style="max-height:400px"/>
 		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/whatieat/6.png")" alt="What I Eat Screenshot" style="max-height:400px"/>
 		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/whatieat/7.png")" alt="What I Eat Screenshot" style="max-height:400px"/>
+		<div class="clear">&nbsp;</div>
+	</div>
+	<div class="pane tab-3" id="tab-3">
+		<h2><a href="@Url.Action("WindowsPhone", "Software", new { id = 3 })">Stirling Birthday</a></h2>
+		<div><a href="http://www.windowsphone.com/s?appid=b3f595ea-10ba-4b1c-8833-3b299078010d" class="blank"><img src="@Url.Content("~/Content/Images/WindowsPhone_208x67_blu.png")" alt="Windows Phone Marketplace" class="noborder" /></a></div>
+		<img class="imagefloat" src="@Url.Content("~/software/windowsphone/stirlingbirthday/01.WVGA.png")" alt="Stirling Birthday Screenshot - Main Screen" style="max-height:400px"/>
+        <p>Stirling Birthday displays your friends' upcoming birthdays on a beautiful live tile!</p>
+        <p>Features:</p>
+        <ul>
+            <li>Full support for all Windows Phone 8 tile sizes</li>
+            <li>Call, Text, or Email birthday greetings from the app</li>
+            <li>Quickly see all birthdays upcoming in the next month, birthdays from the previous month, and all birthdays for all of your contacts.</li>
+            <li>Call, Text, or Email birthday greetings from the app</li>
+            <li>Fully localized into 38 languages</li>
+        </ul>
+		<p>Stirling Birthday is available in the <a href="http://www.windowsphone.com/s?appid=b3f595ea-10ba-4b1c-8833-3b299078010d">Windows Phone Marketplace</a> for $1.49 with a free trial download.</p>
+		<div class="clear">&nbsp;</div>
+		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/stirlingbirthday/02.WVGA.png")" alt="Stirling Birthday Screenshot" style="max-height:400px"/>
+		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/stirlingbirthday/03.WVGA.png")" alt="Stirling Birthday Screenshot" style="max-height:400px"/>
+		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/stirlingbirthday/04.WVGA.png")" alt="Stirling Birthday Screenshot" style="max-height:400px"/>
+		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/stirlingbirthday/05.WVGA.png")" alt="Stirling Birthday Screenshot" style="max-height:400px"/>
+		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/stirlingbirthday/06.WVGA.png")" alt="Stirling Birthday Screenshot" style="max-height:400px"/>
+		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/stirlingbirthday/07.WVGA.png")" alt="Stirling Birthday Screenshot" style="max-height:400px"/>
+		<img class="imagefloatleft" src="@Url.Content("~/software/windowsphone/stirlingbirthday/08.WVGA.png")" alt="Stirling Birthday Screenshot" style="max-height:400px"/>
 		<div class="clear">&nbsp;</div>
 	</div>
 </div>
