--- a/Shane.Church.Web.v2012/Views/Software/WindowsPhone.cshtml
+++ b/Shane.Church.Web.v2012/Views/Software/WindowsPhone.cshtml
@@ -143,7 +143,7 @@
 	<script type="text/javascript">
 		$(document).ready(function () {
 			$().Navigation("initTabs", {
-				selectedIndex: @Model.Id
+				selectedIndex: '@Model.Id'
 			});
 		});
 	</script>
