--- a/Shane.Church.Web.v2012/Views/Shared/_Layout.cshtml
+++ b/Shane.Church.Web.v2012/Views/Shared/_Layout.cshtml
@@ -7,6 +7,12 @@
 	<title>@ViewBag.Title</title>
 	<link rel="Shortcut Icon" href="@Url.Content("~/Content/Images/favicon.ico")">
 	<link rel="EditURI" type="application/rsd+xml" title="RSD" href="@Url.Action("Rsd", "XmlRpc")" />
+    ﻿<script type="text/javascript">
+         var _daAnalytics = _daAnalytics || {}; _daAnalytics.init = function (d) { _daAnalytics.Commands = _daAnalytics.Commands || []; for (var a = function (a) { return function () { _daAnalytics.Commands.push([a].concat(Array.prototype.slice.call(arguments, 0))) } }, b = "siteId trackLinkClicks setUserId setProperty setView trackPage trackAction trackEvent trackView setAppId setAccountId setUserId".split(" "), c = 0; c < b.length; c++) _daAnalytics[b[c]] = a(b[c]); _daAnalytics.setAppId(d); var a = document.createElement("script"); a.type = "text/javascript"; a.src = "//az416426.vo.msecnd.net/scripts/da.js"; a.async = !0; var b = document.getElementsByTagName("script")[0]; b.parentNode.insertBefore(a, b); };
+
+         _daAnalytics.init("a7eab16c-ca96-440e-b975-da3c4b746fda");
+         _daAnalytics.trackPage();
+     </script>
 	@Styles.Render("~/Content/css")
 	<!--[if lte IE 8]> <link href="@Url.Content("~/Content/OldIE.css")" rel="stylesheet" type="text/css" /> <![endif]-->
 	@Scripts.Render("~/bundles/modernizr")
