--- a/Shane.Church.Web.v2015/wwwroot/css/styles.css
+++ b/Shane.Church.Web.v2015/wwwroot/css/styles.css
@@ -338,31 +338,33 @@ Features Slider
 		color: #fff;
 	}
 
-.blog-slider {
+.features-slider {
 	position: relative;
-	padding: 11% 100px 10% 100px;
+	padding: 8% 100px 8% 100px;
 	height: 400px;
 	background-color: #AAA;
 }
 
-	.blog-slider ul {
+	.features-slider ul {
 		margin: 0;
 		padding: 0;
 		list-style: none;
 	}
 
-		.blog-slider ul li {
+		.features-slider ul li {
 			width: 100%;
 		}
 
-	.blog-slider li h1 {
+	.features-slider li h3 {
 		margin-bottom: 15px;
-		color: #fff;
-		font-weight: 400;
-		font-size: 22px;
+		/*color: #fff;*/
 	}
 
-	.blog-slider li p {
+	.features-slider li h4 {
+		color: #49488E;
+	}
+
+	.features-slider li p {
 		color: #fff;
 		font-size: 14px;
 	}
@@ -372,13 +374,13 @@ Features Slider
 	padding: 0;
 }
 
-.blog-slider .flickity-page-dots {
+.features-slider .flickity-page-dots {
 	text-align: left;
 	margin-top: 50px;
 	position: static;
 }
 
-	.blog-slider .flickity-page-dots .dot {
+	.features-slider .flickity-page-dots .dot {
 		margin: 0 12px 0 0;
 	}
 
